--- a/package.json
+++ b/package.json
@@ -4,49 +4,38 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "npx remix build",
-    "dev": "npx shopify app dev",
-    "config:link": "npx shopify app config link",
-    "generate": "npx shopify app generate",
-    "deploy": "npx shopify app deploy",
-    "config:use": "npx shopify app config use",
-    "env": "npx shopify app env",
-    "log": "npx shopify app logs",
-    "info": "npx shopify app info",
-    "scaffold": "npx shopify app scaffold",
-    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "build": "remix build",
+    "dev": "remix dev",
+    "start": "remix-serve build/index.js",
     "typecheck": "tsc --noEmit",
-    "preview": "npx remix-serve build/index.js",
-    "prisma:generate": "npx prisma generate",
-    "prisma:push": "npx prisma db push",
-    "prisma:migrate": "npx prisma migrate dev",
-    "prisma:studio": "npx prisma studio"
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "preview": "remix-serve build/index.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0",
-    "@remix-run/fs-routes": "^2.15.0",
-    "@remix-run/node": "^2.7.1",
-    "@remix-run/react": "^2.7.1",
-    "@remix-run/serve": "^2.7.1",
-    "@shopify/app-bridge-react": "^4.1.6",
+    "@prisma/client": "^5.0.0",
+    "@remix-run/node": "^2.0.0",
+    "@remix-run/react": "^2.0.0",
+    "@remix-run/serve": "^2.0.0",
+    "@shopify/app-bridge-react": "^4.0.0",
     "@shopify/polaris": "^12.0.0",
-    "@shopify/shopify-app-remix": "^3.4.0",
-    "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
-    "isbot": "^5.1.0",
-    "luxon": "^3.7.2",
+    "@shopify/shopify-app-remix": "^3.0.0",
+    "@shopify/shopify-app-session-storage-prisma": "^5.0.0",
+    "isbot": "^4.0.0",
+    "luxon": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-tsconfig-paths": "^5.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.7.1",
+    "@remix-run/dev": "^2.0.0",
     "@types/luxon": "^3.3.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.42.0",
+    "prisma": "^5.0.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-tsconfig-paths": "^4.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
